--- a/website/templates/user_not_found.html
+++ b/website/templates/user_not_found.html
@@ -35,7 +35,8 @@
 
 <div class="error-container">
     <div class="error-code">ERROR 400</div>
-    <div class="error-message"> Sorry we can't a find a user with those details. You can sign-up here though</div>
+    <div class="error-message"> Sorry we can't a find a user with those details. You can sign-up with the link below.</div>
+    <a href="/">Sign-up Here</a> 
     <img src="{{ url_for('static', filename='cant_find_user.jpeg') }}" alt="Your Image">
 
 </div>
